Fix Vercel npm ci error - use npm install instead
- Changed npm ci to npm install for better compatibility
- Added troubleshooting guide for npm ci errors

--- a/Desktop/sekret ilçe/sekreterlik4/vercel.json
+++ b/Desktop/sekret ilçe/sekreterlik4/vercel.json
@@ -1,8 +1,8 @@
 {
-  "buildCommand": "cd sekreterlik-app/client && npm ci && npm run build",
+  "buildCommand": "cd sekreterlik-app/client && npm install && npm run build",
   "outputDirectory": "sekreterlik-app/client/dist",
   "framework": null,
-  "installCommand": "cd sekreterlik-app/client && npm ci",
+  "installCommand": "cd sekreterlik-app/client && npm install",
   "rewrites": [
     {
       "source": "/(.*)",
