--- a/Desktop/sekret ilçe/sekreterlik4/sekreterlik-app/client/package.json
+++ b/Desktop/sekret ilçe/sekreterlik4/sekreterlik-app/client/package.json
@@ -31,7 +31,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
+    "@babel/parser": "^7.28.5",
     "@babel/traverse": "^7.28.5",
+    "@babel/types": "^7.28.5",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.21",
     "browserslist": "^4.27.0",
