--- a/Desktop/sekret ilçe/sekreterlik4/render.yaml
+++ b/Desktop/sekret ilçe/sekreterlik4/render.yaml
@@ -1,8 +1,8 @@
 services:
   - type: static
     name: ilce-sekreterlik
-    buildCommand: cd sekreterlik-app/client && npm install && npm run build
-    staticPublishPath: sekreterlik-app/client/dist
+    buildCommand: cd "Desktop/sekret ilçe/sekreterlik4/sekreterlik-app/client" && npm install && npm run build && node scripts/fix-spa-routing.js
+    staticPublishPath: "Desktop/sekret ilçe/sekreterlik4/sekreterlik-app/client/dist"
     envVars:
       - key: VITE_USE_FIREBASE
         value: true
