--- a/Desktop/sekret ilçe/sekreterlik4/sekreterlik-app/client/package.json
+++ b/Desktop/sekret ilçe/sekreterlik4/sekreterlik-app/client/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:render": "vite build && node scripts/fix-spa-routing.js",
     "preview": "vite preview"
   },
   "keywords": [],
