Fix Render config: Specify version1 branch

--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,7 @@
 services:
   - type: static
     name: ilce-sekreterlik
+    branch: version1
     rootDir: "Desktop/sekret-ilce/sekreterlik4/sekreterlik-app/client"
     buildCommand: npm install && npm run build && node scripts/fix-spa-routing.js
     staticPublishPath: "dist"
