--- a/Desktop/-1 bakı/apart4 2/render.yaml
+++ b/Desktop/-1 bakı/apart4 2/render.yaml
@@ -4,7 +4,7 @@ services:
     env: node
     plan: free
     buildCommand: npm install && npm run build
-    startCommand: npm run start:production
+    startCommand: node server.cjs
     envVars:
       - key: NODE_ENV
         value: production
