Fix: Add rootDir to render.yaml to ensure correct path

--- a/Desktop/-1 bakı/apart4 2/render.yaml
+++ b/Desktop/-1 bakı/apart4 2/render.yaml
@@ -3,6 +3,7 @@ services:
     name: apartmecra
     env: node
     plan: free
+    rootDir: .
     buildCommand: npm install && npm run build
     startCommand: node server.cjs
     envVars:
