fix: Install devDependencies for build - include vite

--- a/Desktop/-1 bakı/apart4 2/render.yaml
+++ b/Desktop/-1 bakı/apart4 2/render.yaml
@@ -4,7 +4,7 @@ services:
     env: node
     plan: free
     rootDir: .
-    buildCommand: npm install && npm run build
+    buildCommand: NPM_CONFIG_PRODUCTION=false npm install && npm run build
     startCommand: node server.cjs
     envVars:
       - key: NODE_ENV
