--- a/Desktop/-1 bakı/apart4 2/firebase.json
+++ b/Desktop/-1 bakı/apart4 2/firebase.json
@@ -12,7 +12,8 @@
     }
   ],
   "functions": {
-    "source": "functions"
+    "source": "functions",
+    "runtime": "nodejs22"
   },
   "emulators": {
     "auth": {
