--- a/Desktop/-1 bakı/apart4 2/render.yaml
+++ b/Desktop/-1 bakı/apart4 2/render.yaml
@@ -5,7 +5,7 @@ services:
     plan: free
     rootDir: .
     buildCommand: npm install --include=dev && npm run build
-    startCommand: node server.cjs
+    startCommand: cd /opt/render/project && node server.cjs
     envVars:
       - key: NODE_ENV
         value: production
