--- a/Desktop/-1 bakı/apart4 2/package.json
+++ b/Desktop/-1 bakı/apart4 2/package.json
@@ -20,12 +20,15 @@
     "firebase:deploy": "firebase deploy"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.7",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "express": "^4.18.2",
     "firebase": "^12.4.0",
     "html2canvas": "^1.4.1",
+    "json-server": "^0.17.3",
     "jspdf": "^3.0.2",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
@@ -36,7 +39,6 @@
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.21",
-    "json-server": "^0.17.3",
     "multer": "^1.4.5-lts.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.13",
