--- a/Desktop/-1 bakı/apart4 2/render.yaml
+++ b/Desktop/-1 bakı/apart4 2/render.yaml
@@ -4,7 +4,7 @@ services:
     env: node
     plan: free
     rootDir: .
-    buildCommand: npm install --include=dev && npm run build
+    buildCommand: npm install --include=dev && cd /opt/render/project && npm run build
     startCommand: cd /opt/render/project && node server.cjs
     envVars:
       - key: NODE_ENV
