fix: Force correct directory in build command and vite config

--- a/Desktop/-1 bakı/apart4 2/package.json
+++ b/Desktop/-1 bakı/apart4 2/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --root .",
+    "build": "vite build",
     "preview": "vite preview",
     "server": "node server.cjs",
     "json-server": "json-server --watch db.json --port 3001",
