fix: Add /healthz endpoint for Render health checks

--- a/Desktop/-1 bakı/apart4 2/render.yaml
+++ b/Desktop/-1 bakı/apart4 2/render.yaml
@@ -24,6 +24,6 @@ services:
         value: 1:669151390046:web:30590b4e09a529d17d47cf
       - key: VITE_FIREBASE_MEASUREMENT_ID
         value: G-4J8KGT8KJ5
-    healthCheckPath: /health
+    healthCheckPath: /healthz
     autoDeploy: true
 
