--- a/Desktop/-1 bakı/apart4 2/vercel.json
+++ b/Desktop/-1 bakı/apart4 2/vercel.json
@@ -1,7 +1,7 @@
 {
     "rewrites": [
         {
-            "source": "/((?!assets/|uploads/|favicon.ico|manifest.json|sw.js).*)",
+            "source": "/(.*)",
             "destination": "/index.html"
         }
     ]
